@@ -798,6 +798,7 @@
 ||livechatxx.xyz^
 ||livekl.top^
 ||liwzzxisds.shop^
+||lkd49d.vip^
 ||lkjvbn.com^
 ||llld.shop^
 ||loan588.cc^
@@ -983,6 +984,7 @@
 ||pioni.live^
 ||piu11.com^
 ||pizzaseo.com^
+||pjeakytres.com^
 ||pji.buzz^
 ||plmaxjun.com^
 ||plusonenative.com^
