@@ -1,5 +1,10 @@
 # 歷史更新 History Update
 
+* 20230425 Update
+  * 更新 內容農場與多導向可能危險網站
+  * 更新 個人不想看的廣告或網站
+  * 調整 LineBot
+
 * 20230424 Update
   * 更新 內容農場與多導向可能危險網站
   * 更新 個人不想看的廣告或網站
